css/presentation.css
html {
	font: normal 62.5% 'Aften Screen';
}

body {
	font-size: 2.1rem;
	line-height: 1.7;
}

a {
	color: #282829;
	text-decoration: none;
}

/* TABLE OF CONTENTS */
body span.section-header, 
body a.toc-item,
header {
	display: block;
	width: 100%;
	font-size: 1em;
	padding-top: 0.6em;
	padding-bottom: 0.6em;
	text-decoration: none;
}

/* WIDTH OF THE LAYOUT */
body div.inner {
	width: 1000px;
	margin: auto;
	overflow: hidden;
	padding-left: 1.5em;
	padding-right: 1.5em;
	position: relative;
	z-index: 1;
}

/* Give the section headers and menu items the same styling */
body a.toc-item {
	position: fixed;
	cursor: pointer;
	box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
}

body a.hidden {
	visibility: hidden;
}

/* Set background colours for section headers and sections */
body span.section-header {
	margin-bottom: -1em;
}

section > div.inner {
	padding-top: 3em;
	padding-bottom: 3em;
}

section#introduction div.inner,
section#project-top div.inner {
	padding-bottom: 2.5em;
}

section#introduction, 
section#introduction span.section-header {
	color: #ffffff;
	background-color: #2854A7;
}

section#projects-experience, 
section#projects-experience span.section-header {
	color: #282829;
	background-color: #EEEFF1;
}

section#contact,
section#contact span.section-header {
	color: #282829;
	background-color: #ffffff;
}

a.toc-item {
	transition: padding-bottom 0.2s ease-in-out;
}

a.toc-item:hover, 
a.toc-item:focus {
	padding-bottom: 2rem;
}

/* HEADER */
header {
	position: fixed;
	cursor: pointer;
	z-index: 20;
	top: 0;
	transition: top 0.2s ease-out;
	background-color: rgba(255, 255, 255, .95);
	transition: all 0.2s ease-in-out;
	animation: animationName 0.2s ease-in-out;
	box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
}

@keyframes animationName {
	from {
		top: -3em;
	}
	
	to {
		top: 0;
	}
}

header:hover {
	padding-top: 2rem;
}

/* CONTENT */
/* INTRODUCTION */
section#introduction {
	position: relative;
	overflow: hidden;
	display: flex;
	justify-content: center;
	align-items: center;
}

div#welcome-text {
	width: 80%;
	margin: 0 auto;
	text-align: center;
}

section#introduction div.inner div#welcome-text p {
	z-index: 1;
	position: relative;
	text-align: left;
	font-size: 1.2em;
}

section#introduction div#picture,
section#project-top div#picture {
	width: 8em;
	height: 8em;
	position: relative;
	z-index: 1;
	margin: 0 auto 0.5em auto;
	border-radius: 9999rem;
	background: url('../img/picture.png') no-repeat left top/100%;
	z-index: 1;
}

section#project-top div#picture {
	float: right;
	width: 7em;
	height: 7em;
	margin-bottom: 2em;
	margin-left: 3em;
	position: relative;
	top: -1em;
}

section#introduction div#picture + span {
	display: block;
	font-size: 1em;
	margin-bottom: 2em;
}

div#lines {
	position: absolute;
	width: 100%;
	height: 100%;
	z-index: 0;
	top: 0;
	left: 0;
	opacity: 0.15;
}

div#lines img {
	display: block;
	position: absolute;
	width: 7em;
}

section a {
	color: #ffffff;
	display: inline-block;
	text-decoration: none;
	position: relative;
}

section a:after {
	content: '';
	display: block;
	position: absolute;
	width: 100%;
	height: 0.1rem;
	bottom: 7%;
	left: 0;
	background-color: #ffffff;
	transition: all 0.2s ease-in-out;
}

section a:hover:after,
section a:focus:after {
	transform: translateY(0.3rem);
}

section a.more {
	display: table;
	color: #ffffff !important;
	margin: 2em auto 0 auto;
	font-size: 1em;
	padding: 0.3em 0.8em !important;
	text-decoration: none !important;
	z-index: 5;
	border: 0 !important;
	position: relative;
	background-color: #f7bb59;
	box-shadow: 0.4em 0.4em 0 rgba(0, 0, 0, 0.15);
	transition: all 0.2s ease-in-out;
}

section a.more:hover,
section a.more:focus {
	transform: translateX(0.1em) translateY(0.1em);
	box-shadow: 0.3em 0.3em 0 rgba(0, 0, 0, 0.15);
}

section a.more:after {
	display: none !important;
}

/* PROJECTS AND EXPERIENCE */
section#projects-experience > div.inner {
	display: flex;
	flex-wrap: wrap;
	flex-direction: row;
}

section#projects-experience div.inner a {
	padding: 1em 1.3em 0.8em 1.4em;
	background-color: #ffffff;
	flex: 0 0 calc(50% - 2em);
	text-align: right;
	margin-right: 2em;
	margin-bottom: 2em;
	display: block;
	text-decoration: none;
	color: #282829;
	position: relative;
	overflow: hidden;
	box-shadow: 0.4em 0.4em rgba(0, 0, 0, 0.04);
}

section#projects-experience div.inner a img {
	width: calc(100% + 1.4em + 1.5em);
	display: block;
	margin: 0.7em 0;
	margin-left: -1.4em;
	margin-right: -1.3em;
	transition: opacity 0.2s ease-in-out;
}

section#projects-experience div.inner a:last-of-type {
	margin-bottom: 0;
}

section#projects-experience div.inner a:nth-of-type(2n) {
	break-after: always;
	margin-right: 0;
}

div.inner h1,
div.inner h2 {
	font-size: 1.0em;
}

section#projects-experience div.inner a h1 {
	text-align: left;
	position: relative;
	line-height: 1.5;
}

section#projects-experience div.inner a span {
	font-family: 'Aften Screen';
	position: relative;
	z-index: 0;
	font-size: 0.8em;
	font-weight: bold;
	text-align: left;
}

section#projects-experience div.inner a span:before {
	content: '';
	position: absolute;
	width: 2.5rem;
	height: 2.5rem;
	top: calc(50% - 1.25rem);
	left: calc(50% - 1.25rem);
	z-index: -1;
	border-radius: 9999rem;
	transform: scale(0.5);
	background-color: transparent;
	transition: all 0.2s ease-in-out;
}

section#projects-experience div.inner a:after {
	display: none !important;
}

section#projects-experience div.inner a:hover span:before {
	transform: scale(1);
	background-color: #F9C776;
}

section#projects-experience div.inner a:hover span.internship:before {
	background-color: #76a8f9;
}

section#projects-experience div.inner a span.type {
	color: #888888;
	display: table;
	font-weight: normal;
}

section#projects-experience div.inner a span.type:before {
	display: none;
}

/* CONTACT */
section#contact > div.inner {
	text-align: center;
}

section#contact a {
	color: #000000;
	font-size: 1.4em;
	text-decoration: none;
	position: relative;
	z-index: 0;
}

section#contact a:before {
	content: '';
	position: absolute;
	width: 4rem;
	height: 4rem;
	top: calc(50% - 2rem);
	left: calc(50% - 1.9rem);
	z-index: -1;
	border-radius: 9999rem;
	transform: scale(0.5);
	background-color: transparent;
}

section#contact a,
section#contact a:before {
	transform-origin: center center;
	transition: all 0.2s ease-in-out;
}

section#contact a:hover:before {
	transform: scale(1);
	background-color: #F9C776;
}

section#contact div#icons {
	display: flex;
	flex-direction: row;
	justify-content: center;
	margin: 3rem 0;
}

section#contact div#icons a {
	display: block;
	width: 8rem;
	height: 8rem;
	padding: 2rem;
	margin-right: 1.3em;
	border-radius: 9999rem;
	background-color: #EEEFF1;
	transition: all 0.2s ease-in-out;
}

section#contact div#icons a:after,
section#contact div#icons a:before {
	display: none;
}

section#contact div#icons a:hover,
section#contact div#icons a:focus {
	transform: scale(1.1);
	background-color: #2854A7;
}

section#contact div#icons a svg.logo-path {
	fill: #000000;
	display: block;
	transition: all 0.1s ease-in-out;
}

section#contact div#icons a:hover svg.logo-path,
section#contact div#icons a:focus svg.logo-path {
	fill: #ffffff;
}

section#contact div#icons a:last-of-type {
	margin: 0;
}

